Updates on final paper version

--- a/Fast-Graph-Sampling.ipynb
+++ b/Fast-Graph-Sampling.ipynb
@@ -128,7 +128,7 @@
     "import numpy as np # numpy is the Python matrix package and np.random.geometric\n",
     "                   # is a geometric random variate generator\n",
     "\"\"\"\n",
-    "Generate a random Erdos-Renyi graph by ball-dropping. The input is:\n",
+    "Generate a random Erdos-Renyi graph by grass-hopping. The input is:\n",
     "   n: the number of nodes\n",
     "   p: the probability of an edge\n",
     "The result is a list of directed edges. \n",
@@ -137,8 +137,8 @@
     "  grass_hop_er(8,0.25) # 8 node Erdos-Renyi with probability 0.25\n",
     "\"\"\"\n",
     "def grass_hop_er(n,p):\n",
-    "    edgeindex = -1                    # we label edges from 0 to n^2-1\n",
-    "    gap = np.random.geometric(p)      # first distance to edge\n",
+    "    edgeindex = -1                   # we label edges from 0 to n^2-1\n",
+    "    gap = np.random.geometric(p)     # first distance to edge\n",
     "    edges = []\n",
     "    while edgeindex+gap < n*n:       # check to make sure we have a valid index\n",
     "        edgeindex += gap             # increment the index\n",
@@ -810,8 +810,7 @@
     }
    ],
    "source": [
-    "\"\"\" \n",
-    "Map a multi-index from the multiplication \n",
+    "\"\"\" Map a multi-index from the mult. table \n",
     "table to a row and column in the Kronecker \n",
     "matrix. The input is:\n",
     "  mind: the multi-index for the mult table\n",
